--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_hero-title.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_hero-title.scss
@@ -2,6 +2,9 @@
 	background-size: cover;
 	background-position: top center;
 	position: relative;
+	&.default-image {
+		background-image: url('../img/bg/default-hero-title.jpg');
+	}
 	.container {
 		position: relative;
 		min-height: em(303);
