--- a/wp-content/themes/laureus-theme/front-dev/scss/_footer.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/_footer.scss
@@ -13,6 +13,7 @@ footer {
 		@include desktop {
 			display: inline-block;
 			text-align: left;
+			vertical-align: top;
 		}
 		&.brand {
 			@include desktop {
