--- a/wp-content/themes/laureus-theme/front-dev/scss/_commons.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/_commons.scss
@@ -1,7 +1,9 @@
 // Ceneric block for content
 .content-default {
+	padding-top: em(34);
 	padding-bottom: em(34);
 	@include desktop {
+		padding-top: em(74);
 		padding-bottom: em(74);
 	}
 	h2 {
@@ -24,7 +26,7 @@
 		}
 	}
 	img {
-		width: 100%;
+		max-width: 100%;
 		height: auto;	
 	}
 }
