--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_hero-title.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_hero-title.scss
@@ -1,6 +1,7 @@
 .hero-title-wrapper {
 	background-size: cover;
 	background-position: top center;
+	background-repeat: no-repeat;
 	position: relative;
 	&.default-image {
 		background-image: url('../img/bg/default-hero-title.jpg');
