--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/home/_block-hero.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/home/_block-hero.scss
@@ -2,6 +2,16 @@
 	position: relative;
 	height: 100vh;
 	background-color: $marine-dk;
+	&::before {
+		content:"";
+		display: block;
+		position: absolute;
+		bottom: 0;
+		left: 50%;
+		width: 1px;
+		height: 80px;
+		background-color: $white;
+	}
 	&::after {
 		content: "";
 		position: absolute; 
