--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/home/_block-involved.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/home/_block-involved.scss
@@ -43,12 +43,14 @@
 		}
 		li {
 			display: block;
-			height: em(450);
-			text-align: center;
+			height: em(200);
 			background-size: cover;
-			background-position: left top;
+			background-position: center top;
 			position: relative;
 			transition: all 0.4s;
+			@include desktop {
+				height: em(550);
+			}
 			> a {
 				position: absolute;
 				display: block;
@@ -56,12 +58,12 @@
 				left: 0;
 				width: 100%;
 				height: 100%;
-				z-index: 1;
-				background-color: rgba(255,255,255,0.3);
+				z-index: 3;
+				background-color: rgba(0, 20, 64, 0.44);
 			}
 			&:hover {
 				> a {
-					background-color: rgba(255,255,255,0);
+					background-color: rgba(0, 20, 64, 0);
 				}
 				@include desktop {
 					width: 25%;
@@ -74,11 +76,11 @@
 			}
 			.involved__wrap {
 				position: absolute;
-				width: 100%;
+				width: em(300);
 				left: 0;
 				bottom: 0;
 				padding: em(33);
-				z-index: 2;
+				z-index: 4;
 				h4 {
 					color: $white;
 					font-size: em(20);
