--- a/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
@@ -24,6 +24,7 @@
 
 //loops
 @import "loops/_loop-team";
+@import "loops/_loop-grants";
 
 // Universal Blocks
 @import "blocks/commons/_block-logos";
