--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-dark-carousel.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-dark-carousel.scss
@@ -36,20 +36,12 @@
 	
 	// Light carousel
 	.dark-carousel {
-
+		padding: em(40) 0;
 		.slick-slide {
-			opacity: 0.6;
-			.carousel-item {
-				.inner-wrapper {
-					figure {
-						span {
-							&.photo {
-								width: em(115);
-								height: em(115);
-							}
-						}
-					}
-				}
+			opacity: 0;
+			transition: all 0.3s;
+			&.slick-active {
+				opacity: 0.5;
 			}
 			&.slick-center {
 				opacity: 1;
@@ -61,6 +53,21 @@
 									width: em(145);
 									height: em(145);
 								}
+							}
+						}
+					}
+				}
+			}
+			.carousel-item {
+				.inner-wrapper {
+					figure {
+						width: em(260);
+						display: inline-block;
+						padding-bottom: em(20);
+						span {
+							&.photo {
+								width: em(115);
+								height: em(115);
 							}
 						}
 					}
