--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-parallax.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-parallax.scss
@@ -2,6 +2,7 @@
 	background-size: cover;
 	background-position: top center;
 	background-repeat: no-repeat;
+	background-attachment: fixed;
 	position: relative;
 	padding: em(200) 0; 
 	.container {
