--- a/wp-content/themes/laureus-theme/front-dev/scss/pages/_page-template-about.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/pages/_page-template-about.scss
@@ -1,3 +1,25 @@
 .page-template-about-tpl {
+	.hero-title-wrapper {
+		
+		header {
+			h1 {
+				span {
+					font-size: 30px;
+					display: block;
+					&.title-0{
+						margin-right: 15px;
+					}
+					&.title-0,
+					&.title-1 {
+						display: inline-block;
+						font-size: 60px;
+						@include desktop {
+							font-size: 110px;
+						}
+					}
+				}
+			}	
+		}
+	}
 	
 }
